Se configuro la clase de envío de correo por medio del cron

--- a/connection/config.ini
+++ b/connection/config.ini
@@ -1,4 +1,4 @@
 [database]
-username = root
-password = root
-dbname = payme
+username = getsirmx_payme
+password = qwaszx..
+dbname = getsirmx_payme
