AJUSTES DE SERVIDOR CON DANIEL

--- a/connection/config.ini
+++ b/connection/config.ini
@@ -1,4 +1,4 @@
 [database]
-username = getsirmx_payme
-password = qwaszx..
-dbname = getsirmx_payme
+username = payme2
+password = Payme2016.
+dbname = payme2
